# code-submit

./: LICENSE  LICENSE copy  README.md  codesubmit.yaml  implementation_plan.md  pyproject.toml  spec.md  task.md  tasks.md  walkthrough.md
codesubmit/: cli.py  config.py  executor.py  scanner.py
codesubmit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codesubmit/formatters/: base.py  docx_fmt.py  markdown.py  pdf_fmt.py
demo/: codesubmit.yaml  hello.py  submission.docx  submission.md
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
