[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codesubmit"
version = "0.1.0"
description = "A CLI tool to convert executable code into submission-ready academic documents."
authors = [
  { name = "CodeSubmit Team", email = "author@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pyyaml",
    "python-docx",
    "xhtml2pdf",
]

[project.scripts]
codesubmit = "codesubmit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codesubmit*"]
